--- a/index.htm
+++ b/index.htm
@@ -324,7 +324,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 Phone: ...</p>
 <p>
 	Or use the form below to send us a message and we will get in contact with you as soon as possible. 
-	</p><form>
+	</p><form name="contact" method="POST" data-netlify="true">
 		<label>Name</label><input type="text" name="name">
 		<label>Email</label><input type="text" name="email">
 		<label>Phone</label><input type="text" name="phone">
