new texts from george

--- a/index.htm
+++ b/index.htm
@@ -174,7 +174,7 @@ nav.primary { display: none; }
 <body>
 <header id="top">
 	<div class="black-fade"></div>
-	<h1>The Moulin Treillard<br>a turn-key gites business for sale!</h1>
+	<h1>The Moulin Treillard<br>St. Hilaire La Treille, New Aquitaine</h1>
 </header>
 <nav class="primary">
 <div>
@@ -190,7 +190,12 @@ nav.primary { display: none; }
 </nav>
 <main>
 	<h2>Renovated 17th century mill with 2 gites, heated swimmingpool and barn</h2>
-<p>The whole property is located in a haven of greenery, in peace, without any nuisance but still only 5 minutes to highway A20 and about 35 minutes from Limoges. The garden is furnished with a tree house and a small wooden chalet. A small lake overlooked by the swimming pool, where you can spot mallards, herons and the forest wildlife.</p>
+  <p>A fully renovated 17th century watermill, Moulin Treillard rests in a secluded valley, on an area of some 2 hectares (4 acres).<br>
+Bordered by the river Brame. The property consists of 3 dwellings, The Mill, The House and The Cottage, a covered heated swimming pool and lake, plus 3 further barns.<br>
+A great opportunity to acquire this historic (1692) property located in a secluded valley in the Haute Vienne region of France.
+All the living accommodation has been sympathetically renovated over a 20-year period to include, New roofs, double glazing, new electrics, new plumbing and full insulation so that the property enjoys a B rating for DPE.</p>
+<p>The property rests some 15 minutes’ drive from the A20 motorway, mainline trains to either Toulouse or Paris are accessible from La Souterraine (15mins) and is also serviced by 2 airports: Limoges (45 minutes) and Poitiers (65 minutes)</p>
+<p>10 bedrooms, 7 bathrooms, 6 receptions, 3 barns offering scope for further accommodation and parking for 6 cars</p>
 
 <nav class="secondary">
 <a href="#mill" style="background-image: url(assets/md-house.jpg); flex: 45%;"><div class="navtext">The Mill</div></a>
@@ -211,7 +216,8 @@ nav.primary { display: none; }
     </a>
   </div>
 <h3 id="mill">The Mill</h3>
-<p>The mill has 3 bedrooms with en-suite bathrooms, a living room opening onto the dining room, an equipped kitchen and a utility room. The terrace gives access to the covered and heated swimming pool.</p>
+<p>The Mill has central heating, together with additional log burning stoves.<br>
+The original watermill, on the ground floor now consists of large lounge, separate dining room, kitchen/breakfast room, utility room and office/walk in larder. On the first floor there are 3 bedrooms all with en-suite facilities, there are also 2 cellars of around 80 m2 in total. The terrace gives access to the covered and heated swimming pool.</p>
 
 
 <div id="gallery-mill" class="photos">
@@ -230,12 +236,7 @@ nav.primary { display: none; }
 
 
 <h3 id="garden">The Garden</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>The large garden has a mountain stream flowing through, and a small lake. Resident Kingfishers, visits from Deer and above all Total Peace, a little piece of Paradise!</p>
 <div id="gallery-garden" class="photos">
   <div class="gallery-items" style="background-image: url(assets/md-garden.jpg)">
   </div>
@@ -250,7 +251,9 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
 <h3 id="gite">Gite</h3>
-<p>Th gîte has 5 bedrooms, 2 of which are en suite, a bathroom / wc, a lounge, living room and fitted kitchen with private terrace.</p>
+<p>The Mill-house was used as a Gite. It has central heating together with additional log burning stoves.
+ The ground floor consists of lounge, fully fitted kitchen with bread oven and a TV room. First floor has 3 bedrooms 2 twin and 1 double together with full bathroom and toilet. The second floor boasts a further 2 double bedrooms both with en-suite facilities.<br>
+From the kitchen you walk onto a kiwi covered terrace with views of the swimming pool and lake.</p>
 <div id="gallery-gite" class="photos">
   <div class="gallery-items" style="background-image: url(assets/md-gite1.jpg)">
   </div>
@@ -265,7 +268,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
 <h3 id="cottage">Cottage</h3>
-<p>The 2nd gîte includes an equipped kitchen open to living room / lounge. Upstairs: 2 bedrooms and a bathroom / WC. Private terrace.</p>
+<p>The recently finished cottage is electrically heated and has fully fitted kitchen/ diner and lounge on the ground floor, on the first floor there is a shower room with walk in shower, a twin bedroom and a large double bedroom which opens onto an elevated terrace overlooking the pool, lake and gardens.</p>
 <div id="gallery-cottage" class="photos">
   <div class="gallery-items" style="background-image: url(assets/md-cottage.jpg)">
   </div>
@@ -319,9 +322,11 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
 <h3 id="contact">Contact Us</h3>
-<p>Don't hesitate to contact us by email or phone for more information or to book a viewing.</p>
-<p>Email: ....<br>
-Phone: ...</p>
+<p>Don't hesitate to contact us for more information  or to book a viewing.<br>
+Phone: +33 (0) 555 373 641 <br>
+Mobile: +33 (0)685 327 111<br>
+Email: <a href="mailto:darass-philippe-pierre@abithea.fr?subject=moulintreillard">darass-philippe-pierre@abithea.fr</a></p>
+
 <p>
 	Or use the form below to send us a message and we will get in contact with you as soon as possible. 
 	</p><form name="contact" method="POST" data-netlify="true">
