--- a/index.htm
+++ b/index.htm
@@ -190,12 +190,12 @@ nav.primary { display: none; }
 </nav>
 <main>
 	<h2>Renovated 17th century mill with 2 gites, heated swimmingpool and barn</h2>
-  <p>A fully renovated 17th century watermill, Moulin Treillard rests in a secluded valley, on an area of some 2 hectares (4 acres).<br>
-Bordered by the river Brame. The property consists of 3 dwellings, The Mill, The House and The Cottage, a covered heated swimming pool and lake, plus 3 further barns.<br>
-A great opportunity to acquire this historic (1692) property located in a secluded valley in the Haute Vienne region of France.
+  <p>A fully renovated 17th century watermill, Moulin Treillard rests in a secluded valley, on an area of some 2 hectares (4 acres). 
+Bordered by the river Brame. The property consists of 3 dwellings, The Mill, The House and The Cottage, a covered heated swimming pool and lake, plus 3 further barns.</p>
+<p>A great opportunity to acquire this historic (1692) property located in a secluded valley in the Haute Vienne region of France.
 All the living accommodation has been sympathetically renovated over a 20-year period to include, New roofs, double glazing, new electrics, new plumbing and full insulation so that the property enjoys a B rating for DPE.</p>
 <p>The property rests some 15 minutes’ drive from the A20 motorway, mainline trains to either Toulouse or Paris are accessible from La Souterraine (15mins) and is also serviced by 2 airports: Limoges (45 minutes) and Poitiers (65 minutes)</p>
-<p>10 bedrooms, 7 bathrooms, 6 receptions, 3 barns offering scope for further accommodation and parking for 6 cars</p>
+<p>10 bedrooms, 7 bathrooms, 6 receptions, 3 barns offering scope for further accommodation and parking for 6 cars!</p>
 
 <nav class="secondary">
 <a href="#mill" style="background-image: url(assets/md-house.jpg); flex: 45%;"><div class="navtext">The Mill</div></a>
@@ -216,7 +216,7 @@ All the living accommodation has been sympathetically renovated over a 20-year p
     </a>
   </div>
 <h3 id="mill">The Mill</h3>
-<p>The Mill has central heating, together with additional log burning stoves.<br>
+<p>The Mill has central heating, together with additional log burning stoves. 
 The original watermill, on the ground floor now consists of large lounge, separate dining room, kitchen/breakfast room, utility room and office/walk in larder. On the first floor there are 3 bedrooms all with en-suite facilities, there are also 2 cellars of around 80 m2 in total. The terrace gives access to the covered and heated swimming pool.</p>
 
 
@@ -252,7 +252,7 @@ The original watermill, on the ground floor now consists of large lounge, separa
 
 <h3 id="gite">Gite</h3>
 <p>The Mill-house was used as a Gite. It has central heating together with additional log burning stoves.
- The ground floor consists of lounge, fully fitted kitchen with bread oven and a TV room. First floor has 3 bedrooms 2 twin and 1 double together with full bathroom and toilet. The second floor boasts a further 2 double bedrooms both with en-suite facilities.<br>
+ The ground floor consists of lounge, fully fitted kitchen with bread oven and a TV room. First floor has 3 bedrooms 2 twin and 1 double together with full bathroom and toilet. The second floor boasts a further 2 double bedrooms both with en-suite facilities. 
 From the kitchen you walk onto a kiwi covered terrace with views of the swimming pool and lake.</p>
 <div id="gallery-gite" class="photos">
   <div class="gallery-items" style="background-image: url(assets/md-gite1.jpg)">
@@ -298,7 +298,7 @@ From the kitchen you walk onto a kiwi covered terrace with views of the swimming
 </div>
 
 <h3 id="outbuildings">Outbuildings</h3>
-<p>The property comes with a large barn, several storage units, a separate shed for camper, pagoda and tree house.</p>
+<p>The property comes with 3 barns offering scope for further accommodation.</p>
 <div id="gallery-outbuildings" class="photos">
   <div class="gallery-items" style="background-image: url(assets/md-outbuildings5.jpg)">
   </div>
