--- a/index.htm
+++ b/index.htm
@@ -174,7 +174,7 @@ nav.primary { display: none; }
 <body>
 <header id="top">
 	<div class="black-fade"></div>
-	<h1>The Moulin Treillard<br>St. Hilaire La Treille, New Aquitaine</h1>
+	<h1>The Moulin Treillard</h1>St. Hilaire La Treille, New Aquitaine
 </header>
 <nav class="primary">
 <div>
