--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@ main p {
 		background-position: center;
 		position: relative;
 	}
-	header h1, main, nav.primary div {
+	header h1, header span, main, nav.primary div {
 		max-width: 940px;
 		margin: 0 auto;
 		padding: 0 20px;
@@ -174,7 +174,7 @@ nav.primary { display: none; }
 <body>
 <header id="top">
 	<div class="black-fade"></div>
-	<h1>The Moulin Treillard</h1>St. Hilaire La Treille, New Aquitaine
+	<h1>The Moulin Treillard</h1><span>St. Hilaire La Treille, New Aquitaine</span>
 </header>
 <nav class="primary">
 <div>
