--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@ main p {
 		background-position: center;
 		position: relative;
 	}
-	header h1, header span, main, nav.primary div {
+	header h1, main, nav.primary div {
 		max-width: 940px;
 		margin: 0 auto;
 		padding: 0 20px;
@@ -37,6 +37,9 @@ main p {
     	z-index: 200;
     position: relative;
 	}
+  header h1 span {
+    font-size: 1em;
+  }
 	.black-fade {
 		    position: absolute;
     width: 100%;
@@ -174,7 +177,7 @@ nav.primary { display: none; }
 <body>
 <header id="top">
 	<div class="black-fade"></div>
-	<h1>The Moulin Treillard</h1><span>St. Hilaire La Treille, New Aquitaine</span>
+	<h1>The Moulin Treillard<br><span>St. Hilaire La Treille, New Aquitaine</span></h1>
 </header>
 <nav class="primary">
 <div>
