--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@ main p {
     position: relative;
 	}
   header h1 span {
-    font-size: 1em;
+    font-size: 16px;
   }
 	.black-fade {
 		    position: absolute;
