--- a/index.htm
+++ b/index.htm
@@ -177,7 +177,7 @@ nav.primary { display: none; }
 <body>
 <header id="top">
 	<div class="black-fade"></div>
-	<h1>The Moulin Treillard<br><span>St. Hilaire La Treille, New Aquitaine</span></h1>
+	<h1><span>St. Hilaire La Treille, New Aquitaine</span><br>The Moulin Treillard</h1>
 </header>
 <nav class="primary">
 <div>
