--- a/index.htm
+++ b/index.htm
@@ -192,7 +192,7 @@ nav.primary { display: none; }
 </div>
 </nav>
 <main>
-	<h2>Renovated 17th century mill with 2 gites, heated swimmingpool and barn</h2>
+	<h2>Renovated 17th century mill with 2 gites, heated swimmingpool and barns</h2>
   <p>A fully renovated 17th century watermill, Moulin Treillard rests in a secluded valley, on an area of some 2 hectares (4 acres). 
 Bordered by the river Brame. The property consists of 3 dwellings, The Mill, The House and The Cottage, a covered heated swimming pool and lake, plus 3 further barns.</p>
 <p>A great opportunity to acquire this historic (1692) property located in a secluded valley in the Haute Vienne region of France.
