--- a/index.htm
+++ b/index.htm
@@ -328,7 +328,7 @@ From the kitchen you walk onto a kiwi covered terrace with views of the swimming
 <p>Don't hesitate to contact us for more information  or to book a viewing.<br>
 Phone: +33 (0) 555 373 641 <br>
 Mobile: +33 (0)685 327 111<br>
-Email: <a href="mailto:darass-philippe-pierre@abithea.fr?subject=moulintreillard">darass-philippe-pierre@abithea.fr</a></p>
+Email: <a href="mailto:darras-philippe-pierre@abithea.fr?subject=moulintreillard">darras-philippe-pierre@abithea.fr</a></p>
 
 <p>
 	Or use the form below to send us a message and we will get in contact with you as soon as possible. 
